@@ -1,3 +1,7 @@
+2005-04-28  Paul Brook  <paul@codesourcery.com>
+
+	* exceptions.c (print_flush): Handle NULL gdb_stdout_serial.
+
 2005-04-27  Mark Kettenis  <kettenis@gnu.org>
 
 	* solib-svr4.c (_initialize_svr4_solib)
